WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274830
[Skia] Fix corner cases involving drawing shadows when ImageBitmap is accelerated
https://bugs.webkit.org/show_bug.cgi?id=274830
Summary
[Skia] Fix corner cases involving drawing shadows when ImageBitmap is acceler...
Pawel Lampe
Reported
2024-05-29 07:18:40 PDT
See
https://github.com/WebKit/WebKit/commit/ab81e7f867ac35e5208bea45000caea21b7c5e9f
Attachments
Add attachment
proposed patch, testcase, etc.
Pawel Lampe
Comment 1
2024-05-29 07:21:13 PDT
See 1) from
https://bugs.webkit.org/show_bug.cgi?id=273239#c2
as well
Pawel Lampe
Comment 2
2024-06-26 02:42:53 PDT
It turns out, in this case we're drawing GPU-backed image on CPU-backed surface with filter. The resulting operation does nothing, as filter erases everything as we're ending up here:
https://github.com/WebKit/WebKit/blob/be3ab121b14a9074bdc6031125646c295fe7d1f4/Source/ThirdParty/skia/src/core/SkSpecialImage.cpp#L195
This fiddle showcases the problem:
https://fiddle.skia.org/c/3bca2eca37709b84b7afd7bc5ac88321
Skia developers suggested to address this issue on WebKit end.
Pawel Lampe
Comment 3
2024-06-26 04:04:37 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30186
EWS
Comment 4
2024-06-27 00:30:21 PDT
Committed
280408@main
(5d0a3ef57206): <
https://commits.webkit.org/280408@main
> Reviewed commits have been landed. Closing PR #30186 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug