[Skia] Fix corner cases involving drawing shadows when ImageBitmap is accelerated https://bugs.webkit.org/show_bug.cgi?id=274830

Reviewed by Carlos Garcia Campos.

When drawing GPU-backed image on CPU-backed canvas with filter, we need to convert image to CPU-backed one.
Otherwise, skia won't do the conversion on its own and we will end up with no drawing operation being done.

* LayoutTests/platform/glib/TestExpectations:
* Source/WebCore/platform/graphics/skia/GraphicsContextSkia.cpp:
(WebCore::GraphicsContextSkia::drawNativeImageInternal):

Canonical link: https://commits.webkit.org/280408@main